--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <section id="home" class="home">
         <div class="content">
-            <h3>fresh coffee in the morning</h3>
+            <h3>Fresh coffee in the morning</h3>
             <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit.
                   Placeat Labore, Sint Cupiditate Distinctio Tempora Reiciendis.
                 </p>
