Updating "What" line 42

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="imag"><img src="images/about-img.jpeg"></div>
             <div class="contant">
-                <h3>what makes our coffee special?</h3>
+                <h3>What makes our coffee special?</h3>
                 <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Voluptatibus Qui Ea Ullam,
                     Enim Tempora Ipsum Fuga Alias Quae Ratione A Officiis Id Temporibus Autem? Quod Nemo Facilis
                     Cupiditate. Ex, Vel?
