--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </header>
-    <section id="home" class="home x">
+    <section id="home" class="content">
         <div class="content">
             <h3>Fresh coffee in the morning!!!</h3>
             <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit.
